# slanplot

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: demo_calendar.py  demo_chord.py  demo_circ_tree.py  demo_hatched.py  demo_joyplot.py  demo_marginal.py  demo_pitree.py  demo_sankey.py  demo_stree.py  run_all_demos.sh
examples/notebooks/: 01_Relational_Plots.ipynb  02_Distribution_Plots.ipynb  03_Scientific_Visualization.ipynb
examples/scripts/: demo_calendar.py  demo_hatched.py  demo_marginal.py  demo_marginal_errorbar.py  demo_pi_art.py  demo_sankey.py  demo_sheatmap.py  demo_upset.py  demo_venn.py  scientific_viz_1.py  scientific_viz_2.py
scripts/: build_notebooks.py
src/slanplot/: __init__.py
src/slanplot/colors/: __init__.py  scientific.py
src/slanplot/core/: colors.py
src/slanplot/distribution/: calendar.py  hatched.py  joyplot.py  marginal.py  sheatmap.py  venn.py
src/slanplot/relational/: chord.py  circ_tree.py  pitree.py  sankey.py  stree.py
tests/: test_basic.py
