[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slanplot"
version = "0.1.1"
description = "A Python visualization library replicating slandarer's MATLAB plots"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name="the-d" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20",
    "matplotlib>=3.3",
    "scipy>=1.6",
    "seaborn>=0.11",
    "pandas>=1.3",
    "upsetplot>=0.9.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8"
]

[tool.hatch.build.targets.wheel]
packages = ["src/slanplot"]
# Ensure data files like .mat are packaged
include = [
    "src/slanplot/core/data/*.mat",
]
